src/test/resources/org/nest/nestml/_cocos/valid/unitsInODEs.nestml
neuron validODETest:
  initial_values:
    Distance km
  end

  input:
      spikeInh nS <- inhibitory spike
      spikeExc nS <- excitatory spike
      currents <- current
  end

  parameters:
  end

  output: spike

  equations:
    Distance' = Distance / DeltaTime
  end

  internals:
    DeltaTime s
  end

  update:
  end
end
