src/test/resources/org/nest/nestml/_cocos/invalid/unitsInODEs.nestml
neuron validODETest:
  initial_values:
    Distance km
  end

  input:
      spikeInh   <- inhibitory spike
      spikeExc   <- excitatory spike
      currents <- current
  end

  parameters:
    DeltaTime s
  end

  output: spike

  equations:
    Distance' = Distance * DeltaTime 
  end

  internals:
  end

  update:
  end
end
